gcc/testsuite/gcc.target/avr/mmcu/tiny-memx.c
/* { dg-do compile } */
/* { dg-options "-mmcu=avrtiny" } */

const __memx char ascmonth[] = "Jan"; /* { dg-error "not supported" } */
